made changes to the the text style

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SuiVote - Decentralized Voting on Sui Blockchain</title>
-    <meta name="description" content="Secure, transparent, and immutable blockchain voting system powered by Sui" />
-    <meta name="author" content="SuiVote" />
+    <title>SUIVOTE | DECENTRALIZED VOTING ON SUI BLOCKCHAIN</title>
+    <meta name="description" content="SECURE, TRANSPARENT, AND IMMUTABLE BLOCKCHAIN VOTING SYSTEM POWERED BY SUI" />
+    <meta name="author" content="SUIVOTE" />
 
-    <meta property="og:title" content="SuiVote - Decentralized Voting Platform" />
-    <meta property="og:description" content="Secure, transparent, and immutable blockchain voting system powered by Sui" />
+    <meta property="og:title" content="SUIVOTE | DECENTRALIZED VOTING PLATFORM" />
+    <meta property="og:description" content="SECURE, TRANSPARENT, AND IMMUTABLE BLOCKCHAIN VOTING SYSTEM POWERED BY SUI" />
     
-    <!-- Add futuristic font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Audiowide&family=Inter:wght@400;500;600;700&display=swap">
+    <!-- Add fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Audiowide&family=Roboto+Mono:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap">
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
