--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <!-- Add fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Audiowide&family=Roboto+Mono:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap">
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/sv.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/sv.jpg" />
   </head>
 
   <body>
